--- a/최종-final.css
+++ b/최종-final.css
@@ -24,15 +24,45 @@ h3 {
     margin-top: 20px;
 }
 
+.phoneNum {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 30px;
+}
+
+.phoneNum > input {
+    width:90px;
+    height:30px;
+}
+
 .wrapper__body {
     display: flex;
     flex-direction: row;
     justify-content: center;
     padding-top: 20px;
     font-size: 30px;
-    margin: 20px;
 }
 
-.btn1 {
+#num {
+    margin: 10px;
+}
 
+#btn1 {
+    margin: 10px;
+}
+
+#count {
+    margin: 10px;
+}
+
+#btn2 {
+    margin: 10px;
+}
+
+.wrapper__footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 30px;
 }
